--- a/Projects/Docker/index.html
+++ b/Projects/Docker/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-     <body style="background-color:rgb(178, 178, 162);"><center>
+     <meta charset="utf-8">
+     <body style="background-image: linear-gradient(90deg, #fd5fff, #7158e2);"><center>
      <head>
           <title>DOCKED AT A COFFEE SHOP</title>
      </head>
      <body>
           <h1>AHOY! Today's date and time is:
-          <p><span id="datetime"></span></p>
+          <p style="color:#ffffff">Date/Time:<span id="datetime"></span></p>
           <script>
                var dt = new Date();
                document.getElementById("datetime").innerHTML = dt.toLocalString();
